--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,23 +2,17 @@
   "name": "Python 3",
   "image": "mcr.microsoft.com/devcontainers/python:1-3.11-bullseye",
   "customizations": {
-    "codespaces": {
-      "openFiles": ["README.md", "camera-movement-detection/app.py"]
-    },
     "vscode": {
-      "settings": {},
       "extensions": ["ms-python.python", "ms-python.vscode-pylance"]
     }
   },
-  "postCreateCommand": "apt-get update && apt-get install -y libgl1 && pip install -r requirements.txt",
-  "postAttachCommand": {
-    "server": "streamlit run camera-movement-detection/app.py --server.enableCORS false --server.enableXsrfProtection false"
-  },
+  "updateContentCommand": "apt-get update && apt-get install -y libgl1 && pip install -r requirements.txt",
+  "postAttachCommand": "streamlit run camera-movement-detection/app.py --server.enableCORS false --server.enableXsrfProtection false",
+  "forwardPorts": [8501],
   "portsAttributes": {
     "8501": {
-      "label": "Application",
+      "label": "Streamlit App",
       "onAutoForward": "openPreview"
     }
-  },
-  "forwardPorts": [8501]
+  }
 }
